background, jumbotron, color schemes, formatting

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -22,7 +23,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
-        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
+        <img src="/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
         <span style="display: inline-block;"></span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -67,9 +68,9 @@
                       <label for="formGroupExampleInput2">Email</label>
                       <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example : mscott@dundermifflin.com">
                     </div>
-                      <div class="form-group2">
-                        <label for="formGroupExampleInput3">Message</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Tell me something good"> 
+                      <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Message</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Tell me something good!"></textarea>
                         <button class="btn btn-primary btn-lg">Send it!</button>
                       </div>
                     </form>
@@ -84,6 +85,7 @@
 <div class="footer">
   <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
   <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+  <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></i>
 </div>
 
 
