--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +21,7 @@
   <!-- Nav bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-blue">
     <a class="navbar-brand" href="#"> 
-      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
+      <img src="/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,7 +43,29 @@
     </div>
   </nav>
   <!-- About Me Card -->
-  <div class="container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4" style="font-size: 100px;">Hey there!</h1>
+      <p class="lead">
+        <img src="profile.jpeg" alt="profile" class="img-thumbnail" style="height: 300px;">
+          My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
+          <br><br>
+          I've spent the majority of my professional career in the service industry and customer service.
+          Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
+          Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
+          <br><br>
+          I have chosen a career in the developing world because I love the flexibility that it allows. 
+          Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
+          <br><br>
+          Another big draw to this career is impact developers really have on the world.
+          The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
+          I want to use these skills to share important information that should be easily accessible.
+          <br><br>
+          Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
+      </p>
+    </div>
+  </div>
+  <!-- <div class="container-intro">
     <div class="row">
       <div class="col-sm-8">
         <div class="page-header">
@@ -52,13 +75,10 @@
           <div class="card mt-2">
             <div class="card-body-index">
               <p class="card-text">
-                <div class="row">
-                  <div class="col-md-5">
+                  <div class="col-md-12">
                     <img src="profile.jpeg" alt="profile" class="img-thumbnail">
-                  </div>
-                  <div class="col-md-7">
                     <p>
-                      My name is Ashli Hanson and I am an aspiring Full Stack web developer in Austin, Texas! 
+                      My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
                       <br><br>
                       I've spent the majority of my professional career in the service industry and customer service.
                       Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
@@ -71,17 +91,16 @@
                       The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
                       I want to use these skills to share important information that should be easily accessible.
                       <br><br>
-                      Eventually, I would love to work fully remote with an oragnization I fully support so I can work while I travel to the national and state parks across the country. 
+                      Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
                       
                     </p>
-                  </div>
                 </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--Links Card-->
-      <div class="col-sm-4">
+      <!-- <div class="col-sm-4" id="find-links">
         <div class="card mt-2">
           <div class="card-body">
             <h5 class="card-title">Where to find me</h5>
@@ -94,11 +113,13 @@
           </div>
         </div>
       </div>
-  </div>
+  </div> -->
+  
 
   <div class="footer">
     <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
     <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+    <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></i>
   </div>
  
 
