--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -21,7 +22,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
-      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
+      <img src="navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -44,7 +45,7 @@
   </nav>
   <!--Portfolio-->
   
-<h1 class = "folioheader">Some things I can do</h1>
+<h1 class ="folioheader">Some things I can do</h1>
 <div class="container-folio">
   <div class="col-md-12">
     <div class="row">
@@ -121,6 +122,7 @@
 <div class="footer">
   <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
   <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+  <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></i>
 </div>
 
 
