background fixed, some styling

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Ashli Hanson</title>
+  <title>Contact Ashli</title>
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="reset.css">
@@ -85,7 +85,7 @@
 <div class="footer">
   <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
   <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
-  <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></i>
+  <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
 </div>
 
 
