--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Ashli Hanson</title>
+  <title>About Ashli</title>
 
   <!-- Bootstrap and CSS links -->
   <link rel="stylesheet" href="reset.css">
@@ -65,61 +65,11 @@
       </p>
     </div>
   </div>
-  <!-- <div class="container-intro">
-    <div class="row">
-      <div class="col-sm-8">
-        <div class="page-header">
-          <h1>Hey there!</h1>
-        </div>
-        <div class="col-sm-12">
-          <div class="card mt-2">
-            <div class="card-body-index">
-              <p class="card-text">
-                  <div class="col-md-12">
-                    <img src="profile.jpeg" alt="profile" class="img-thumbnail">
-                    <p>
-                      My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
-                      <br><br>
-                      I've spent the majority of my professional career in the service industry and customer service.
-                      Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
-                      Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
-                      <br><br>
-                      I have chosen a career in the developing world because I love the flexibility that it allows. 
-                      Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
-                      <br><br>
-                      Another big draw to this career is impact developers really have on the world.
-                      The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
-                      I want to use these skills to share important information that should be easily accessible.
-                      <br><br>
-                      Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
-                      
-                    </p>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!--Links Card-->
-      <!-- <div class="col-sm-4" id="find-links">
-        <div class="card mt-2">
-          <div class="card-body">
-            <h5 class="card-title">Where to find me</h5>
-            <p class="card-text">
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
-                </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div> -->
-  
 
   <div class="footer">
     <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
     <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
-    <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></i>
+    <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
   </div>
  
 
