week day planner added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="folioimg2inv.jpg" class="card-img-top" alt="place holder image">
+          <img src="weekday.png" class="card-img-top" alt="Week Day Planner">
             <div class="card-body">
-                <h5 class="card-title">Future Project</h5>
-                <p class="card-text">Some day I</p>
-                <a href="#" class="btn btn-primary">Check it out</a>
+                <h5 class="card-title">Week Day Planner</h5>
+                <p class="card-text">This web application is designed to help the user organize their workday by the hour.</p>
+                <a href="https://ashlinhanson.github.io/work-day-planner/" target="_blank" class="btn btn-primary">Check it out</a>
             </div>
         </div>
       </div>
