--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,13 @@
   </nav>
   <!--Portfolio-->
   
-<h1 class ="folioheader">Some things I can do</h1>
+<h1 class ="folioheader">Project Examples</h1>
 <div class="container-folio">
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="weekday.png" class="card-img-top" alt="Week Day Planner">
+          <img src="weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px;">
             <div class="card-body">
                 <h5 class="card-title">Week Day Planner</h5>
                 <p class="card-text">This web application is designed to help the user organize their workday by the hour.</p>
@@ -61,11 +61,11 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="folioimg3.jpg" class="card-img-top" alt="place holder image">
+          <img src="code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px;">
             <div class="card-body">
-              <h5 class="card-title">Future Project</h5>
-              <p class="card-text">will have projects</p>
-              <a href="#" class="btn btn-primary">Check it out</a>
+              <h5 class="card-title">JavaScript Knowledge Quiz</h5>
+              <p class="card-text">This web application is a quiz designed to test the user on their knowledge of JavaScript.</p>
+              <a href="https://ashlinhanson.github.io/code-quiz/" target="_blank" class="btn btn-primary">Check it out</a>
             </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <img src="folioimg2.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project</h5>
-              <p class="card-text">to show you :)</p>
+              <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
@@ -90,7 +90,7 @@
           <img src="folioimg6inv.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
-                <p class="card-text">Some day I</p>
+                <p class="card-text"></p>
                 <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
@@ -100,7 +100,7 @@
           <img src="folioimg7.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project</h5>
-              <p class="card-text">will have projects</p>
+              <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
@@ -110,7 +110,7 @@
           <img src="folioimg6.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project</h5>
-              <p class="card-text">to show you :)</p>
+              <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
