--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     </div>
   </nav>
   <!-- About Me Card -->
-  <div class="card col-md-12">
-    <div class="row">
-        <img src="profile.jpeg" alt="profile" class="img-thumbnail" style="height: 300px;">
-          <h1 class="card-title">Hey there!</h1>
-          <p class="col-md">My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
+  <h1 class="display-4" style="font-size: 100px; margin-left: 30px;">Hey there!</h1>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <img src="profile.jpeg" alt="profile" id="profileImg" style="height: 300px;">
+        <p class="lead">
+            My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
             <br><br>
             I've spent the majority of my professional career in the service industry and customer service.
             Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
@@ -60,31 +61,11 @@
             The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
             I want to use these skills to share important information that should be easily accessible.
             <br><br>
-            Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. </p>
+            Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
+        </p>
       </div>
-  </div>
-  <!-- <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4" style="font-size: 100px;">Hey there!</h1>
-      <p class="lead">
-        <img src="profile.jpeg" alt="profile" class="img-thumbnail" style="height: 300px;">
-          My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
-          <br><br>
-          I've spent the majority of my professional career in the service industry and customer service.
-          Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
-          Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
-          <br><br>
-          I have chosen a career in the developing world because I love the flexibility that it allows. 
-          Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
-          <br><br>
-          Another big draw to this career is impact developers really have on the world.
-          The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
-          I want to use these skills to share important information that should be easily accessible.
-          <br><br>
-          Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
-      </p>
     </div>
-  </div> -->
+</div>
 
   <div class="footer">
     <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
