--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <br><br>
             I've spent the majority of my professional career in the service industry and customer service.
             Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
-            Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
+            Being a manager in a fast paced environment, like a coffee shop, really sharpened my problem solving skills and multitasking abilities. 
             <br><br>
-            I have chosen a career in the developing world because I love the flexibility that it allows. 
+            I have chosen a career in the web developing world because I love all that is has to offer. 
             Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
             <br><br>
-            Another big draw to this career is impact developers really have on the world.
+            Another big draw to this career is the impact developers can really have on the world.
             The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
-            I want to use these skills to share important information that should be easily accessible.
+            I want to use these skills to share important information that should be easily accessible to anyone.
             <br><br>
             Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
         </p>
