--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,10 @@
                   <h1>Lets Connect! </h1>
                   <p>
                     I would love to hear from you!
+                    <br><br>
+                    Currently this form isn't connected to my email, so feel free to send me an email at :
+                    <br>
+                    <h4>ashlinhanson@gmail.com</h4>
                   </p>
                   <form>
                     <div class="form-group">
