fixed logo on github pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Nav bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-blue">
     <a class="navbar-brand" href="#"> 
-      <img src="/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
+      <img src="navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
