--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
-        <img src="/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
+        <img src="navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
         <span style="display: inline-block;"></span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
