--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,15 @@
                   <p>
                     I would love to hear from you!
                     <br><br>
-                    Currently this form isn't connected to my email, so feel free to send me an email at :
-                    <br>
-                    <h4>ashlinhanson@gmail.com</h4>
+                    <ul><h5>Ways to reach me :</h5>
+                      <li>Email : ashlinhanson@gmail.com</li>
+                      <li>Phone : (512)704-5368</li>
+                      <li><a href="https://www.linkedin.com/in/ashlihanson/" target="_blank">LinkedIn</a></li>
+                      <li><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
+                    </ul>
                   </p>
-                  <form>
+                  <!-- saving this code for when I can figure out how to link my email to it -->
+                  <!-- <form>
                     <div class="form-group">
                       <label for="formGroupExampleInput">Name</label>
                       <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example : Michael Scott">
@@ -77,7 +81,7 @@
                           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Tell me something good!"></textarea>
                         <button class="btn btn-primary btn-lg">Send it!</button>
                       </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
           </div>
