styling contact paragraph and beginning list

--- a/contact.html
+++ b/contact.html
@@ -56,14 +56,17 @@
               <p class="card-text">
                 <div class="container-sm col-sm-12">
                   <h1>Lets Connect! </h1>
-                  <p>
+                  <p id="contactP">
                     I would love to hear from you!
                     <br><br>
-                    <ul><h5>Ways to reach me :</h5>
-                      <li>Email : ashlinhanson@gmail.com</li>
-                      <li>Phone : (512)704-5368</li>
-                      <li><a href="https://www.linkedin.com/in/ashlihanson/" target="_blank">LinkedIn</a></li>
-                      <li><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
+                    <ul><h5><strong>Ways to reach me :</strong></h5>
+                      <li class="listItems">Email : ashlinhanson@gmail.com</li>
+                      <br>
+                      <li class="listItems">Phone : (512)704-5368</li>
+                      <br>
+                      <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" target="_blank">LinkedIn</a></li>
+                      <br>
+                      <li class="listItems"><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
                     </ul>
                   </p>
                   <!-- saving this code for when I can figure out how to link my email to it -->
