added links and styling to list items

--- a/contact.html
+++ b/contact.html
@@ -59,14 +59,14 @@
                   <p id="contactP">
                     I would love to hear from you!
                     <br><br>
-                    <ul><h5><strong>Ways to reach me :</strong></h5>
-                      <li class="listItems">Email : ashlinhanson@gmail.com</li>
+                    <ul><h4><strong>Ways to reach me :</strong></h4>
+                      <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links">ashlinhanson@gmail.com</a></li>
                       <br>
                       <li class="listItems">Phone : (512)704-5368</li>
                       <br>
-                      <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" target="_blank">LinkedIn</a></li>
+                      <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" class="links" target="_blank">LinkedIn</a></li>
                       <br>
-                      <li class="listItems"><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
+                      <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
                     </ul>
                   </p>
                   <!-- saving this code for when I can figure out how to link my email to it -->
