centered contact content

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           <div class="card mt-4">
             <div class="card-body-contact">
               <p class="card-text">
-                <div class="container-sm col-sm-12">
+                <div class="container-sm col-sm-12" id="contactContent">
                   <h1>Lets Connect! </h1>
                   <p id="contactP">
                     I would love to hear from you!
