final list style

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
     </div>
   </nav>
 <!--Contact Card-->
-  <div class="container">
+  <div class="container-contact">
     <div class="row justify-content-center">
-      <div class="col-sm-10">
+      <div class="col-sm-6">
         <div class="page-header">
         </div>
         <div class="col-sm-12">
@@ -59,7 +59,8 @@
                   <p id="contactP">
                     I would love to hear from you!
                     <br><br>
-                    <ul><h4><strong>Ways to reach me :</strong></h4>
+                    <div class="list">
+                    <ul><h4 id="listTitle"><strong>Ways to reach me :</strong></h4>
                       <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links">ashlinhanson@gmail.com</a></li>
                       <br>
                       <li class="listItems">Phone : (512)704-5368</li>
@@ -67,6 +68,7 @@
                       <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" class="links" target="_blank">LinkedIn</a></li>
                       <br>
                       <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
+                    </div>
                     </ul>
                   </p>
                   <!-- saving this code for when I can figure out how to link my email to it -->
