added code button to portfolios

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,7 @@
                 <h5 class="card-title">Week Day Planner</h5>
                 <p class="card-text">This web application is designed to help the user organize their workday by the hour.</p>
                 <a href="https://ashlinhanson.github.io/work-day-planner/" target="_blank" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/dayPlanner" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
@@ -66,6 +67,7 @@
               <h5 class="card-title">JavaScript Knowledge Quiz</h5>
               <p class="card-text">This web application is a quiz designed to test the user on their knowledge of JavaScript.</p>
               <a href="https://ashlinhanson.github.io/code-quiz/" target="_blank" class="btn btn-primary">Check it out</a>
+              <a href="https://github.com/ashlinhanson/codeQuiz" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
@@ -76,6 +78,7 @@
               <h5 class="card-title">Future Project</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
+              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
@@ -92,6 +95,7 @@
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary">Check it out</a>
+                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
@@ -102,6 +106,7 @@
               <h5 class="card-title">Future Project</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
+              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
@@ -112,6 +117,7 @@
               <h5 class="card-title">Future Project</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Check it out</a>
+              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
             </div>
         </div>
       </div>
