--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
         <img src="navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
-        <span style="display: inline-block;"></span>
+        <span style="display: inline-block;" id="name">Ashli Hanson</span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,6 +61,7 @@
                     <br><br>
                     <div class="list">
                     <ul><h4 id="listTitle"><strong>Ways to reach me :</strong></h4>
+                      <br>
                       <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links">ashlinhanson@gmail.com</a></li>
                       <br>
                       <li class="listItems">Phone : (512)704-5368</li>
@@ -68,6 +69,8 @@
                       <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" class="links" target="_blank">LinkedIn</a></li>
                       <br>
                       <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
+                      <br>
+                      <li class="listItems"><a href="resume.pdf" class="links" target="_blank">Resume</a></li>
                     </div>
                     </ul>
                   </p>
@@ -94,6 +97,7 @@
     </div>
   </div>
 </div>
+
 
 <div class="footer">
   <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
