--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,16 @@
 
 <body>
   <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#"> 
-        <img src="navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
-        <span style="display: inline-block;" id="name">Ashli Hanson</span>
-      </a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-blue">
+    <div class="navbar-brand" id="name"> 
+      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2">
+      Ashli Hanson
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
