cleaned up code formatting and added comments

--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,18 @@
 
 
 <body>
-  <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-blue">
-    <div class="navbar-brand" id="name"> 
-      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2">
+   <!-- Nav bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-blue">
+    <div class="navbar-brand" id="name">
+      <!--nav bar image-->
+      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
       Ashli Hanson
     </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!--dropdown menu for navbar-->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <!--navbar links-->
     <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
@@ -59,8 +61,10 @@
                   <p id="contactP">
                     I would love to hear from you!
                     <br><br>
+                    <!--Contact list-->
                     <div class="list">
-                    <ul><h4 id="listTitle"><strong>Ways to reach me :</strong></h4>
+                    <h4 id="listTitle"><strong>Ways to reach me :</strong></h4>
+                    <ul>
                       <br>
                       <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links">ashlinhanson@gmail.com</a></li>
                       <br>
@@ -71,8 +75,8 @@
                       <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
                       <br>
                       <li class="listItems"><a href="resume.pdf" class="links" target="_blank">Resume</a></li>
-                    </div>
                     </ul>
+                    </div>
                   </p>
                   <!-- saving this code for when I can figure out how to link my email to it -->
                   <!-- <form>
@@ -98,7 +102,7 @@
   </div>
 </div>
 
-
+<!--footer-->
 <div class="footer">
   <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
   <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
