--- a/index.html
+++ b/index.html
@@ -1,90 +1,98 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
+    <title>About Ashli</title>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap and CSS links -->
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <title>About Ashli</title>
-
-  <!-- Bootstrap and CSS links -->
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-blue">
-    <div class="navbar-brand" id="name"> 
-      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2">
-      Ashli Hanson
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- About Me Card -->
-  <div class="container">
-  <h1 class="display-4 text-right" style="font-size: 100px">Hey there!</h1>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <img src="profile.jpeg" alt="profile" id="profileImg" style="height: 300px;">
-        <p class="lead">
-            My name is Ashli Hanson and I am a Full Stack web developer residing in Austin, Texas! 
-            <br><br>
-            I've spent the majority of my professional career in the service industry and customer service.
-            Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
-            Being a manager in a fast paced environment, like a coffee shop, really sharpened my problem solving skills and multitasking abilities. 
-            <br><br>
-            I have chosen a career in the web developing world because I love all that is has to offer. 
-            Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
-            <br><br>
-            Another big draw to this career is the impact developers can really have on the world.
-            The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
-            I want to use these skills to share important information that should be easily accessible to anyone.
-            <br><br>
-            Eventually, I would love to work fully remote with an organization I fully support so I can work while I travel to the national and state parks across the country. 
-        </p>
+  <body>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue">
+      <div class="navbar-brand" id="name">
+        <!--nav bar image-->
+        <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+        Ashli Hanson
+      </div>
+      <!--dropdown menu for navbar-->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!--navbar links-->
+      <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--About Me Bio-->
+    <div class="container">
+      <h1 class="display-4 text-right" style="font-size: 100px">Hey there!</h1>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <!--profile photo-->
+          <img src="profile.jpeg" alt="profile" id="profileImg" style="height: 300px"/>
+          <!--bio paragraph-->
+          <p class="lead">
+            My name is Ashli Hanson and I am a Full Stack web developer residing
+            in Austin, Texas!
+            <br /><br />
+            I've spent the majority of my professional career in the service
+            industry and customer service. Most recently I was a shop manager
+            for Summer Moon Coffee for 3 years at the Buda and Trailer
+            locations. Being a manager in a fast paced environment, like a
+            coffee shop, really sharpened my problem solving skills and
+            multitasking abilities.
+            <br /><br />
+            I have chosen a career in the web developing world because I love
+            all that is has to offer. Using my brain and being challenged are
+            very important to me but I also love having the option to be
+            creative and design.
+            <br /><br />
+            Another big draw to this career is the impact developers can really
+            have on the world. The ability to share information to anyone and
+            everywhere is a gift that I'm excited to work on and take seriously.
+            I want to use these skills to share important information that
+            should be easily accessible to anyone.
+            <br /><br />
+            Eventually, I would love to work fully remote with an organization I
+            fully support so I can work while I travel to the national and state
+            parks across the country.
+          </p>
+        </div>
       </div>
     </div>
-</div>
 
-  <div class="footer">
-    <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
-    <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
-    <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
-  </div>
- 
+    <!--footer-->
+    <div class="footer">
+      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
+    </div>
 
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
-
-  <!-- jQuery CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-  <!-- Bootstrap JavaScript CDN -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-
+    <!-- Bootstrap JavaScript CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
