--- a/portfolio.html
+++ b/portfolio.html
@@ -1,148 +1,155 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
+    <title>Ashli's Work</title>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap and CSS links -->
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <title>Ashli's Work</title>
-
-  <!-- Bootstrap and CSS links -->
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-
-</head>
-
-<body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-blue">
-    <div class="navbar-brand" id="name"> 
-      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2">
-      Ashli Hanson
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!--Portfolio-->
-  
-<h1 class ="folioheader">Project Examples</h1>
-<div class="container-folio">
-  <div class="col-md-12">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px;">
-            <div class="card-body">
+  <body>
+     <!-- Nav bar -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-blue">
+      <div class="navbar-brand" id="name">
+        <!--nav bar image-->
+        <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+        Ashli Hanson
+      </div>
+      <!--dropdown menu for navbar-->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!--navbar links-->
+      <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--Portfolio-->
+    <h1 class="folioheader">Project Examples</h1>
+    <!--top row of card-->
+    <div class="container-folio">
+      <div class="col-md-12">
+        <div class="row">
+          <!--card 1-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px"/>
+              <div class="card-body">
                 <h5 class="card-title">Week Day Planner</h5>
-                <p class="card-text">This web application is designed to help the user organize their workday by the hour.</p>
-                <a href="https://ashlinhanson.github.io/work-day-planner/" target="_blank" class="btn btn-primary">Check it out</a>
-                <a href="https://github.com/ashlinhanson/dayPlanner" target="_blank" class="btn btn-primary">View the code</a>
+                <p class="card-text">
+                  This web application is designed to help the user organize
+                  their workday by the hour.
+                </p>
+                <a href="https://ashlinhanson.github.io/dayPlanner/" target="_blank" class="btn btn-primary">Check it out</a>
+                <ahref="https://github.com/ashlinhanson/dayPlanner" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
             </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px;">
-            <div class="card-body">
-              <h5 class="card-title">JavaScript Knowledge Quiz</h5>
-              <p class="card-text">This web application is a quiz designed to test the user on their knowledge of JavaScript.</p>
-              <a href="https://ashlinhanson.github.io/code-quiz/" target="_blank" class="btn btn-primary">Check it out</a>
-              <a href="https://github.com/ashlinhanson/codeQuiz" target="_blank" class="btn btn-primary">View the code</a>
+          </div>
+          <!--card 2-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">JavaScript Knowledge Quiz</h5>
+                <p class="card-text">
+                  This web application is a quiz designed to test the user on
+                  their knowledge of JavaScript.
+                </p>
+                <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/codeQuiz" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
             </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="folioimg2.jpg" class="card-img-top" alt="place holder image">
-            <div class="card-body">
-              <h5 class="card-title">Future Project</h5>
-              <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Check it out</a>
-              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div> 
-</div>
-<div class="container-folio">
-  <div class="col-md-12">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="folioimg6inv.jpg" class="card-img-top" alt="place holder image">
-            <div class="card-body">
+          </div>
+          <!--card 3-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="folioimg2.jpg" class="card-img-top" alt="place holder image"/>
+              <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary">Check it out</a>
                 <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
             </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="folioimg7.jpg" class="card-img-top" alt="place holder image">
-            <div class="card-body">
-              <h5 class="card-title">Future Project</h5>
-              <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Check it out</a>
-              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
-            </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="folioimg6.jpg" class="card-img-top" alt="place holder image">
-            <div class="card-body">
-              <h5 class="card-title">Future Project</h5>
-              <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Check it out</a>
-              <a href="#" target="_blank" class="btn btn-primary">View the code</a>
-            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div> 
-</div>
+    <!--bottom row of cards-->
+    <div class="container-folio">
+      <div class="col-md-12">
+        <div class="row">
+          <!--card 4-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="folioimg6inv.jpg" class="card-img-top" alt="place holder image"/>
+              <div class="card-body">
+                <h5 class="card-title">Future Project</h5>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary">Check it out</a>
+                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 5-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="folioimg7.jpg" class="card-img-top" alt="place holder image"/>
+              <div class="card-body">
+                <h5 class="card-title">Future Project</h5>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary">Check it out</a>
+                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 6-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="folioimg6.jpg" class="card-img-top" alt="place holder image"/>
+              <div class="card-body">
+                <h5 class="card-title">Future Project</h5>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary">Check it out</a>
+                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<div class="footer">
-  <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
-  <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
-  <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
-</div>
+    <!--footer-->
+    <div class="footer">
+      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
+    </div>
 
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
-<!-- jQuery CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-<!-- Bootstrap JavaScript CDN -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-  
-  
-
-</body>
+    <!-- Bootstrap JavaScript CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
