added 3rd project

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,12 +81,13 @@
           <!--card 3-->
           <div class="col-md-4">
             <div class="card">
-              <img src="folioimg2.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="COVIDCityLimits.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
               <div class="card-body">
-                <h5 class="card-title">Future Project</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check it out</a>
-                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+                <h5 class="card-title">COVID City Limits</h5>
+                <p class="card-text">Web application that allows the user to create a festival line-up poster and playlist with the artists chosen.
+                </p>
+                <a href="https://ashlinhanson.github.io/COVIDCityLimits/" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/COVIDCityLimits" target="_blank" class="btn btn-primary">View the code</a>
               </div>
             </div>
           </div>
